--- a/MyPlaid/app/build.gradle
+++ b/MyPlaid/app/build.gradle
@@ -26,8 +26,10 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.23.3'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:0.23.3'
     implementation 'androidx.core:core-ktx:0.3'
     implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support:palette-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation('com.github.bumptech.glide:glide:4.7.1') {
